feat: 实现文件夹重名检查和目录浏览功能优化 - 新增同目录重名检查(409错误) - 优化批量查询性能 - 修复排序字段映射 - 完善响应数据结构